# corrugated_crm

./: MANIFEST.in  README.md  pyproject.toml  setup.py
corrugated_crm/: hooks.py  modules.txt
corrugated_crm/corrugated_crm/workspace/welch_tools/: welch_tools.json
corrugated_crm/fixtures/: crm_fields_layout.json  custom_field.json  print_format.json  property_setter.json
corrugated_crm/public/js/: audit_trail.js  crm_deal.js  crm_lead.js  crm_map_button.js  welch_global_nav.js
