[project]
name = "corrugated_crm"
version = "0.0.1"
description = "Corrugated industry fields and spec cards for Frappe CRM"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "corrugated_crm"
